# dada

./: .coveragerc  .gitignore  .travis.yml  Readme.md  pyproject.toml
mattes_dada/: __init__.py  cmd.py  dada.py  odt.py  window.py
mattes_dada/model/: __init__.py  dada_text.py
mattes_dada/nltk_data/: __init__.py  nltk_data.py
mattes_dada/odt/: __init__.py  content.py  handler.py  styles.py
mattes_dada/ui/: FileDropTarget.py
tests/: test_dada.py
tests/mattes_dada/: __init__.py  test.odt  test_cmd.py  test_dada.py
tests/mattes_dada/odt/: test_elemStackHandler.py  test_myElement.py  test_odt.xml  test_odtContentHandler.py  test_styleHandler.py
tests/model/: test_dadaText.py
tests/nltk_data/: test_nltk_data.py
