[tool.poetry]
name = "mattes-dada"
version = "0.1.0"
description = "Semi-random text generator using Markov chains"
authors = ["Raphael Krupinski"]
license = "GPL-3.0"
readme = 'README.md'
repository='https://github.com/mattesilver/dada'
classifiers=[
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    'Development Status :: 3 - Alpha',
    'Environment :: Console',
    'Intended Audience :: End Users/Desktop',
    'Intended Audience :: Other Audience',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Topic :: Games/Entertainment :: Fortune Cookies',
    # 'Topic :: Text Processing :: Filters'
]

[tool.poetry.dependencies]
python = "^3.7"
nltk = "^3.4"
markovify = "^0.7.1"
regex = "^2019.2"
wxPython = "^4.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
mdada = 'mattes_dada.cmd:main'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

