[tool.poetry]
name = "mattes-dada"
version = "0.2.2"
description = "Semi-random text generator using Markov chains"
authors = ["Raphael Krupinski"]
license = "GPL-3.0"
readme = 'Readme.md'
repository='https://github.com/mattesilver/dada'
classifiers=[
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    'Development Status :: 3 - Alpha',
    'Environment :: Console',
    'Intended Audience :: End Users/Desktop',
    'Intended Audience :: Other Audience',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Topic :: Games/Entertainment :: Fortune Cookies',
]

[tool.poetry.dependencies]
python = "^3.7"
nltk = "^3.4"
markovify = "^0.7.1"
regex = "^2019.2"

[tool.poetry.dev-dependencies]
codecov = "^2.0"
coverage = "^4.5"
pytest = "^4.3"
pytest-cov = "^2.6"
toml = "^0.10.0"

[tool.poetry.scripts]
mdada = 'mattes_dada.cmd:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
